--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>hello</h1>
+    <p>test</p>
+    
+  </body>
 </html>
